# -*- eval: (cargo-minor-mode 1) -*-

[workspace]
members = [".", "codegen"]

[package]
name = "svgwriter"
version = "0.1.0"
license-file = "LICENSE.md"
include = ["/LICENSE.md", "/README.md", "src/*.rs", "src/tags/*.rs", "src/tags/*.md", "src/xmlwriter/LICENSE", "src/xmlwriter/src/lib.rs"]

description = "Typed SVG Writer"
repository = "https://codeberg.org/msrd0/svgwriter"
keywords = ["svg"]

edition = "2021"

[dependencies]
indexmap = "1.9"
itoa = "1.0"
paste = "1.0"
